feat: 迁移从JPA到MyBatis Plus
主要更改:
- 删除包含敏感信息的备份脚本 (scripts/backup.sh, scripts/restore.sh)
- 更新pom.xml: 移除JPA依赖,添加MyBatis Plus依赖
- 创建9个Mapper接口替换原有Repository
- 更新所有实体类: JPA注解改为MyBatis Plus注解
- 创建MybatisPlusConfig配置类(分页插件和自动填充)
- 更新application.yml和application-prod.yml配置
- 更新AuthService作为示例(Repository改为Mapper)
- 添加MYBATIS_PLUS_MIGRATION.md迁移指南

注意: 其他Service层代码需要按照迁移指南手动更新

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,10 +29,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         
-        <!-- Spring Boot Data JPA -->
+        <!-- MyBatis Plus -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.5</version>
         </dependency>
         
         <!-- Spring Boot Security -->
@@ -66,13 +67,6 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        
-        <!-- Aliyun OSS -->
-        <dependency>
-            <groupId>com.aliyun.oss</groupId>
-            <artifactId>aliyun-sdk-oss</artifactId>
-            <version>3.17.4</version>
         </dependency>
         
         <!-- Aliyun OSS -->
